fix: resize scale wrong place when table align right

--- a/src/style/table-menu.less
+++ b/src/style/table-menu.less
@@ -62,6 +62,9 @@
     }
   }
   &-align {
+    &--active {
+      display: flex;
+    }
     .icon {
       width: 20px;
       height: 20px;
